@@ -240,8 +240,13 @@ NEW FEATURES
 	harder to create a column of the correct length and so avoid a
 	corrupt data frame.
 
-    o   The default methods for add1() and drop1() check for changes
-	in the number of cases in use.
+    o	The default methods for add1() and drop1() now make sure that
+	the models are all fitted to the same set of cases, allowing
+	for the effects of say na.action = na.omit.
+
+	The "lm" and "glm" methods for add1() quoted the <none> model
+	on the original fitted values when using (with a warning) a
+	smaller set of cases for the expanded models.
 
 
 INTERNATIONALIZATION
